--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,14 @@
 spring:
+  datasource:
+    url: jdbc:h2:file:/data/online-store-api
   jpa:
     show-sql: true
   h2:
     console:
       enabled: true
+      path: /h2-console
+      settings:
+        trace: false
+        web-allow-others: false
 server:
   port: 8080
