--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 spring:
   datasource:
-    url: jdbc:h2:file:/data/online-store-api
+    url: jdbc:h2:mem:online-store-db
+    driver-class-name: org.h2.Driver
+    data-username: sa
+    data-password:
   jpa:
     show-sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
